<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".TelaInicio">


    <TextView
        android:id="@+id/nomeapp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:text="@string/inicio"
        android:textColor="@color/darkblue"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="340dp"
        android:layout_height="190dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="41dp"
        android:contentDescription="@string/banner1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/moedas"
        app:srcCompat="@drawable/banner1" />

    <TextView
        android:id="@+id/km"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:text="@string/km"
        android:textColor="@color/darkblue"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/percorridos2"
        app:layout_constraintStart_toEndOf="@+id/valorkm" />

    <TextView
        android:id="@+id/valorkm"
        android:layout_width="43dp"
        android:layout_height="39dp"
        android:layout_marginStart="89dp"
        android:layout_marginTop="50dp"
        android:text="@string/valorkmpercorridos"
        android:textColor="@color/darkblue"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchView"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/percorridos2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/percorridos"
        android:textAlignment="center"
        android:textColor="@color/darkblue"
        app:layout_constraintEnd_toEndOf="@+id/km"
        app:layout_constraintStart_toStartOf="@+id/valorkm"
        app:layout_constraintTop_toBottomOf="@+id/valorkm" />

    <TextView
        android:id="@+id/nomeprimeirocolocado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/nomeprimeirocolocado"
        app:layout_constraintBottom_toBottomOf="@+id/textView"
        app:layout_constraintStart_toEndOf="@+id/textView" />

    <TextView
        android:id="@+id/nomesegundocolocado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/nomesegundocolocado"
        app:layout_constraintBottom_toBottomOf="@+id/textView2"
        app:layout_constraintStart_toEndOf="@+id/textView2" />

    <TextView
        android:id="@+id/nometerceirocolocado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/nometerceirocolocado"
        app:layout_constraintBottom_toBottomOf="@+id/textView3"
        app:layout_constraintStart_toEndOf="@+id/textView3" />

    <TextView
        android:id="@+id/ranking"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="180dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="179dp"
        android:text="@string/ranking"
        android:textColor="@color/darkblue"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView9" />

    <TextView
        android:id="@+id/valormoedas"
        android:layout_width="83dp"
        android:layout_height="39dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="86dp"
        android:text="@string/valormoedas"
        android:textAlignment="center"
        android:textColor="@color/purple"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/valorkm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchView"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/moedas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/moedas"
        android:textColor="#7C4DFF"
        app:layout_constraintBottom_toBottomOf="@+id/percorridos2"
        app:layout_constraintEnd_toEndOf="@+id/valormoedas"
        app:layout_constraintStart_toStartOf="@+id/valormoedas"
        app:layout_constraintTop_toBottomOf="@+id/valormoedas" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/segundolugar"
        android:textColor="@color/purple"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="114dp"
        android:layout_marginTop="20dp"
        android:text="@string/primeirolugar"
        android:textColor="@color/purple"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ranking" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/terceirolugar"
        android:textColor="@color/purple"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <!--    Inicio Menu Bottom-->

    <com.google.android.material.bottomappbar.BottomAppBar
        android:id="@+id/bottomAppBar"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_gravity="bottom"
        app:backgroundTint="@color/gray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="BottomAppBar,VisualLintBottomAppBar" />

    <ImageButton
        android:id="@+id/btn_treinos"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:background="@color/transparent"
        android:contentDescription="@string/treinos"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toBottomOf="@+id/btn_inicio"
        app:layout_constraintEnd_toEndOf="@+id/textconquistas"
        app:layout_constraintStart_toStartOf="@+id/textconquistas"
        app:srcCompat="@drawable/ico_treino"
        tools:ignore="TouchTargetSizeCheck,DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/textconquistas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:text="@string/treinos"
        android:textAlignment="center"
        android:textColor="@color/purple_texts"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/textcaminhada"
        app:layout_constraintTop_toTopOf="@+id/textcaminhada"
        tools:ignore="TextContrastCheck" />

    <ImageButton
        android:id="@+id/btn_campanhas"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:background="@color/transparent"
        android:contentDescription="@string/campanhas"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toBottomOf="@+id/btn_treinos"
        app:layout_constraintEnd_toEndOf="@+id/textcampanha"
        app:layout_constraintHorizontal_bias="0.457"
        app:layout_constraintStart_toStartOf="@+id/textcampanha"
        app:srcCompat="@drawable/campanhas"
        tools:ignore="TouchTargetSizeCheck,DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/textcampanha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:text="@string/campanhas"
        android:textAlignment="center"
        android:textColor="@color/purple_texts"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/texttroquesuasmoedas"
        app:layout_constraintStart_toEndOf="@+id/textconquistas"
        app:layout_constraintTop_toTopOf="@+id/textconquistas" />

    <ImageButton
        android:id="@+id/btn_consultas"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:background="@color/transparent"
        android:contentDescription="@string/consultas"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toBottomOf="@+id/btn_pontos"
        app:layout_constraintEnd_toEndOf="@+id/textconquistas2"
        app:layout_constraintStart_toStartOf="@+id/textconquistas2"
        app:srcCompat="@drawable/ico_consultas"
        tools:ignore="TouchTargetSizeCheck,DuplicateSpeakableTextCheck" />

    <ImageButton
        android:id="@+id/btn_inicio"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="15dp"
        android:background="@color/transparent"
        android:contentDescription="@string/Caminhada"
        android:scaleType="centerInside"
        app:layout_constraintEnd_toEndOf="@+id/textcaminhada"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textcaminhada"
        app:layout_constraintTop_toTopOf="@+id/bottomAppBar"
        app:srcCompat="@drawable/ico_home"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/textconquistas2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:text="@string/consultas"
        android:textAlignment="center"
        android:textColor="@color/purple_texts"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/texttroquesuasmoedas"
        tools:ignore="TextContrastCheck" />

    <ImageButton
        android:id="@+id/btn_pontos"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:background="@color/transparent"
        android:contentDescription="@string/troqueseuspontos"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toBottomOf="@+id/btn_campanhas"
        app:layout_constraintEnd_toEndOf="@+id/texttroquesuasmoedas"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="@+id/texttroquesuasmoedas"
        app:srcCompat="@drawable/troqueseuspontos"
        tools:ignore="TouchTargetSizeCheck,DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/texttroquesuasmoedas"
        android:layout_width="49dp"
        android:layout_height="13dp"
        android:layout_marginEnd="30dp"
        android:text="@string/troqueseuspontos"
        android:textAlignment="center"
        android:textColor="@color/purple_texts"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/textconquistas2"
        app:layout_constraintTop_toTopOf="@+id/textcampanha"
        tools:ignore="TextSizeCheck,TextContrastCheck" />

    <TextView
        android:id="@+id/textcaminhada"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:text="@string/inicio"
        android:textAlignment="center"
        android:textColor="@color/purple_texts"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/bottomAppBar"
        app:layout_constraintTop_toBottomOf="@+id/btn_inicio" />

    <!--fim Menu bottom-->


    <androidx.constraintlayout.widget.Group
        android:id="@+id/group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="km,valorkm" />

    <SearchView
        android:id="@+id/searchView"
        android:layout_width="320sp"
        android:layout_height="50sp"
        android:layout_marginStart="46dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="45dp"
        android:autofillHints="@string/hint_search"
        android:background="@drawable/border"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_perfil" />

    <ImageButton
        android:id="@+id/btn_perfil"
        android:layout_width="50sp"
        android:layout_height="50sp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="25dp"
        android:background="@color/transparent"
        android:contentDescription="@string/perfil"
        android:scaleType="centerInside"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/avatar" />


</androidx.constraintlayout.widget.ConstraintLayout>