<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="86dp">


    <Button
        android:id="@+id/btn_sitegov"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:background="@color/darkblue"
        android:drawableStart="@drawable/icon_telemedicinaespecialidades"
        android:drawablePadding="0dp"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:text="@string/minhacontatext1"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="157dp" />

    <TextView
        android:id="@+id/nomeapp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="152dp"
        android:text="@string/minhacontatitle"
        android:textColor="@color/purple"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="60dp"
        android:layout_height="60dp"
        app:srcCompat="@drawable/avatar"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="81dp" />

    <com.google.android.material.bottomappbar.BottomAppBar
        android:id="@+id/bottomAppBar"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        app:backgroundTint="@color/gray"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="578dp" />

    <ImageView
        android:id="@+id/buttonconsquistas"
        android:layout_width="30dp"
        android:layout_height="30dp"
        app:srcCompat="@drawable/conquistas"
        tools:layout_editor_absoluteX="337dp"
        tools:layout_editor_absoluteY="591dp" />

    <TextView
        android:id="@+id/textconquistas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/conquistas"
        android:textAlignment="center"
        android:textColor="@color/purple"
        tools:layout_editor_absoluteX="317dp"
        tools:layout_editor_absoluteY="623dp" />

    <TextView
        android:id="@+id/texttroquesuasmoedas"
        android:layout_width="102dp"
        android:layout_height="37dp"
        android:text="@string/troquesuasmoedas"
        android:textAlignment="center"
        android:textColor="@color/purple"
        tools:layout_editor_absoluteX="205dp"
        tools:layout_editor_absoluteY="623dp" />

    <ImageView
        android:id="@+id/buttontroquesuasmoedas"
        android:layout_width="30dp"
        android:layout_height="30dp"
        app:srcCompat="@drawable/troqueseuspontos"
        tools:layout_editor_absoluteX="240dp"
        tools:layout_editor_absoluteY="591dp" />

    <TextView
        android:id="@+id/textcampanha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/campanhas"
        android:textAlignment="center"
        android:textColor="@color/purple"
        tools:layout_editor_absoluteX="115dp"
        tools:layout_editor_absoluteY="623dp" />

    <ImageView
        android:id="@+id/buttoncampanha"
        android:layout_width="30dp"
        android:layout_height="30dp"
        app:srcCompat="@drawable/campanhas"
        tools:layout_editor_absoluteX="138dp"
        tools:layout_editor_absoluteY="591dp" />

    <TextView
        android:id="@+id/textcaminhada"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Caminhada"
        android:textAlignment="center"
        android:textColor="@color/purple"
        tools:layout_editor_absoluteX="24dp"
        tools:layout_editor_absoluteY="623dp" />

    <ImageView
        android:id="@+id/buttoncaminhada"
        android:layout_width="30dp"
        android:layout_height="30dp"
        app:srcCompat="@drawable/caminhada"
        tools:layout_editor_absoluteX="45dp"
        tools:layout_editor_absoluteY="591dp" />

    <Button
        android:id="@+id/btnlogohome"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:background="@color/transparent"
        android:drawableTop="@drawable/logo_home"
        android:gravity="center"
        android:padding="0dp"
        app:iconPadding="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_nome"
        android:textColor="@color/darkblue"
        android:textSize="18sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="95dp"
        tools:layout_editor_absoluteY="100dp" />


</androidx.constraintlayout.widget.ConstraintLayout>